crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__zero_float_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "0.0\n"
---
(BeginTopLevelDecls HintExpr Float=>Float@0 EndTopLevelDecls)

[=== canfmt below ===]
Float("0.0")

[=== formatted below ===]

