crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__zero_int_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "0\n"
---
(BeginFile (BeginTopLevelDecls HintExpr Num=>Int@0 EndTopLevelDecls) EndFile)

[=== canfmt below ===]
IntBase10("0")

[=== formatted below ===]

